update font page

--- a/pages/font.html
+++ b/pages/font.html
@@ -32,6 +32,10 @@ permalink: /font
     font-family: 'Source Sans Pro', sans-serif;
     font-size: 20px;
   }
+  .ff-tf {
+    font-family: 'tenforce', sans-serif;
+    font-size: 20px;
+  }
   .ff-ssp-ar {
     font-family: 'Source Sans Pro', Arial, sans-serif;
     font-size: 20px;
@@ -70,7 +74,7 @@ permalink: /font
     <tr>
       <td></td>
       <td class="label">source sans pro</td>
-      <td class="label">source sans pro,<br>arial</td>
+      <td class="label">tenforce</td>
       <td class="label highlight">source sans pro,<br>tenforce,<br>arial</td>
       <td class="label">tenforce,<br>source sans pro,<br>arial</td>
     </tr>
@@ -79,14 +83,14 @@ permalink: /font
     <tr>
       <td class="label">Regular</td>
       <td class="ff-ssp regular">ܒ TenForce क<br>我要約 харагддаг ကြိုဆို ようこそ 歡迎</td>
-      <td class="ff-ssp-ar regular">ܒ TenForce क<br>我要約 харагддаг ကြိုဆို ようこそ 歡迎</td>
+      <td class="ff-tf regular">ܒ TenForce क<br>我要約 харагддаг ကြိုဆို ようこそ 歡迎</td>
       <td class="ff-ssp-tf regular highlight">ܒ TenForce क<br>我要約 харагддаг ကြိုဆို ようこそ 歡迎</td>
       <td class="ff-tf-ssp regular">ܒ TenForce क<br>我要約 харагддаг ကြိုဆို ようこそ 歡迎</td>
     </tr>
     <tr>
       <td class="label">Bold</td>
       <td class="ff-ssp bold">ܒ TenForce क<br>我要約 харагддаг ကြိုဆို ようこそ 歡迎</td>
-      <td class="ff-ssp-ar bold">ܒ TenForce क<br>我要約 харагддаг ကြိုဆို ようこそ 歡迎</td>
+      <td class="ff-tf bold">ܒ TenForce क<br>我要約 харагддаг ကြိုဆို ようこそ 歡迎</td>
       <td class="ff-ssp-tf bold highlight">ܒ TenForce क<br>我要約 харагддаг ကြိုဆို ようこそ 歡迎</td>
       <td class="ff-tf-ssp bold">ܒ TenForce क<br>我要約 харагддаг ကြိုဆို ようこそ 歡迎</td>
     </tr>
@@ -94,7 +98,7 @@ permalink: /font
     <tr>
       <td class="label">italic</td>
       <td class="ff-ssp italic">ܒ TenForce क<br>我要約 харагддаг ကြိုဆို ようこそ 歡迎</td>
-      <td class="ff-ssp-ar italic">ܒ TenForce क<br>我要約 харагддаг ကြိုဆို ようこそ 歡迎</td>
+      <td class="ff-tf italic">ܒ TenForce क<br>我要約 харагддаг ကြိုဆို ようこそ 歡迎</td>
       <td class="ff-ssp-tf italic highlight">ܒ TenForce क<br>我要約 харагддаг ကြိုဆို ようこそ 歡迎</td>
       <td class="ff-tf-ssp italic">ܒ TenForce क<br>我要約 харагддаг ကြိုဆို ようこそ 歡迎</td>
     </tr>
@@ -102,14 +106,14 @@ permalink: /font
     <tr>
       <td class="label">600</td>
       <td class="ff-ssp w600">ܒ TenForce क<br>我要約 харагддаг ကြိုဆို ようこそ 歡迎</td>
-      <td class="ff-ssp-ar w600">ܒ TenForce क<br>我要約 харагддаг ကြိုဆို ようこそ 歡迎</td>
+      <td class="ff-tf w600">ܒ TenForce क<br>我要約 харагддаг ကြိုဆို ようこそ 歡迎</td>
       <td class="ff-ssp-tf w600 highlight">ܒ TenForce क<br>我要約 харагддаг ကြိုဆို ようこそ 歡迎</td>
       <td class="ff-tf-ssp w600">ܒ TenForce क<br>我要約 харагддаг ကြိုဆို ようこそ 歡迎</td>
     </tr>
     <tr>
       <td class="last label">700</td>
       <td class="last ff-ssp w700">ܒ TenForce क<br>我要約 харагддаг ကြိုဆို ようこそ 歡迎</td>
-      <td class="last ff-ssp-ar w700">ܒ TenForce क<br>我要約 харагддаг ကြိုဆို ようこそ 歡迎</td>
+      <td class="last ff-tf w700">ܒ TenForce क<br>我要約 харагддаг ကြိုဆို ようこそ 歡迎</td>
       <td class="last ff-ssp-tf w700 highlight">ܒ TenForce क<br>我要約 харагддаг ကြိုဆို ようこそ 歡迎</td>
       <td class="last ff-tf-ssp w700">ܒ TenForce क<br>我要約 харагддаг ကြိုဆို ようこそ 歡迎</td>
     </tr>
