reoragainze all pages/ combine components to one page

--- a/pages/pmx-present.html
+++ b/pages/pmx-present.html
@@ -1,7 +1,7 @@
 ---
-layout: old-pmx
-title: Item detail
-permalink: /pmx-detail
+layout: present
+title: PMX present
+permalink: /present
 ---
 
 <div class="app cf item-progress--visible">
