fix minor style issues

--- a/pages/tutorial.html
+++ b/pages/tutorial.html
@@ -4,7 +4,7 @@ title: Tutorial
 permalink: /tutorial
 ---
 
-<div class="app cf item-progress--visible">
+<div class="app">
   <div class="app__overlay"></div>
 
   <div class="app-navigator">
