--- a/pages/pmx-future.html
+++ b/pages/pmx-future.html
@@ -4,7 +4,7 @@ title: PMX Future
 permalink: /future
 ---
 
-<div class="app cf item-progress--visible">
+<div class="app item-progress--visible">
   <div class="app__overlay"></div>
 
   <div class="app-navigator">
@@ -54,3 +54,4 @@ permalink: /future
 </div>
 
 {% include popups/singleSelect-breadcrumb.html %}
+{% include popups/multiSelector-columnpicker.html %}
