updade popup include files

--- a/pages/pmx-future.html
+++ b/pages/pmx-future.html
@@ -1,6 +1,6 @@
 ---
 layout: future
-title: PMX Future
+title: PMX future
 permalink: /future
 ---
 
@@ -52,6 +52,3 @@ permalink: /future
   </main>
   <!-- //app__container -->
 </div>
-
-{% include popups/singleSelect-breadcrumb.html %}
-{% include popups/multiSelector-columnpicker.html %}
