--- a/pages/selectors.html
+++ b/pages/selectors.html
@@ -1,7 +1,7 @@
 ---
 layout: default
-title: Components
-permalink: /components
+title: Selectors
+permalink: /selectors
 ---
 
 <div style="/*min-height: 100vh;*/">
