fix line heights in tables

--- a/pages/selectors.html
+++ b/pages/selectors.html
@@ -14,7 +14,7 @@ permalink: /selectors
         <div class="pmx-selector JS_selector">
           <div class="pmx-selector__item pmx-selector__item--selected JS_selectorItem">
             <div class="pmx-selector__block ">
-              <div class="pmx-selector__blockPart pmx-selector__blockPart--field">Nick de Jaeger</div>
+              <div class="pmx-selector__blockPart pmx-selector__blockPart--field">Nick De Jaeger</div>
             </div>
           </div>
         </div>
@@ -412,7 +412,7 @@ permalink: /selectors
         <div class="pmx-selector__itemSeperator"></div>
         <div class="pmx-selector__item pmx-selector__item--selected JS_selectorItem">
           <div class="pmx-selector__block">
-            <div class="pmx-selector__blockPart pmx-selector__blockPart--prefix" style="color: #E52C2C;">ܐ</div>
+            <div class="pmx-selector__blockPart pmx-selector__blockPart--prefix">ܐ</div>
           </div>
         </div>
       </div>
@@ -458,14 +458,14 @@ permalink: /selectors
 
       <div class="pmx-selector pmx-selector--readonly JS_selector">
         <div class="pmx-selector__itemSeperator pmx-selector__itemSeperator--hasLabel">Include</div>
-        <div class="pmx-selector__item pmx-selector__item--selected JS_selectorItem">
+        <div class="pmx-selector__item JS_selectorItem">
           <div class="pmx-selector__block ">
             <div class="pmx-selector__blockPart pmx-selector__blockPart--prefix" style="background-color: #00BFFF;">ग़</div>
             <div class="pmx-selector__blockPart pmx-selector__blockPart--field">Design</div>
           </div>
         </div>
         <div class="pmx-selector__itemSeperator pmx-selector__itemSeperator--hasLabel">And</div>
-        <div class="pmx-selector__item pmx-selector__item--selected JS_selectorItem">
+        <div class="pmx-selector__item JS_selectorItem">
           <div class="pmx-selector__block ">
             <div class="pmx-selector__blockPart pmx-selector__blockPart--prefix" style="background-color: #0BDA51;">ग़</div>
             <div class="pmx-selector__blockPart pmx-selector__blockPart--field">Marketing</div>
