--- a/pages/selectors.html
+++ b/pages/selectors.html
@@ -295,7 +295,7 @@ permalink: /selectors
 <div class="pmx-field">
   <div class="pmx-field__inner">
     <div class="pmx-field__label">Status</div>
-    <div class="pmx-field__value">
+    <div class="pmx-field__value pmx-field__value--overflow">
 
       <div class="pmx-field__input pmx-field__input--hidden">
         <input type="text" value="test" class="pmx-field__inputEl">
@@ -479,14 +479,14 @@ permalink: /selectors
 
       <div class="pmx-selector pmx-selector--readonly JS_selector">
         <div class="pmx-selector__itemSeperator pmx-selector__itemSeperator--hasLabel">Exclude</div>
-        <div class="pmx-selector__item pmx-selector__item--selected JS_selectorItem">
+        <div class="pmx-selector__item JS_selectorItem">
           <div class="pmx-selector__block ">
             <div class="pmx-selector__blockPart pmx-selector__blockPart--prefix" style="background-color: #0BDA51;">ग़</div>
             <div class="pmx-selector__blockPart pmx-selector__blockPart--field">front-end</div>
           </div>
         </div>
         <div class="pmx-selector__itemSeperator pmx-selector__itemSeperator--hasLabel">Or</div>
-        <div class="pmx-selector__item pmx-selector__item--selected JS_selectorItem">
+        <div class="pmx-selector__item JS_selectorItem">
           <div class="pmx-selector__block ">
             <div class="pmx-selector__blockPart pmx-selector__blockPart--prefix" style="background-color: #F4CA16;">ग़</div>
             <div class="pmx-selector__blockPart pmx-selector__blockPart--field">back-end</div>
@@ -501,7 +501,7 @@ permalink: /selectors
 <div class="pmx-field">
   <div class="pmx-field__inner">
     <div class="pmx-field__label">Description</div>
-    <div class="pmx-field__value">
+    <div class="pmx-field__value pmx-field__value--overflow">
 
       <div class="pmx-selector pmx-selector--readonly" >
         <div class="pmx-selector__itemSeperator pmx-selector__itemSeperator--hasLabel">Include</div>
@@ -532,7 +532,7 @@ permalink: /selectors
 <div class="pmx-field">
   <div class="pmx-field__inner">
     <div class="pmx-field__label">Tags | Filter</div>
-    <div class="pmx-field__value">
+    <div class="pmx-field__value pmx-field__value--overflow">
 
       <div class="pmx-selector pmx-selector--readonly MULTISELECT__POPUP JS_selector" data-popid="#filter-tagpicker">
         <div class="pmx-selector__itemSeperator pmx-selector__itemSeperator--hasLabel">Include</div>
@@ -579,7 +579,7 @@ permalink: /selectors
 <div class="pmx-field">
   <div class="pmx-field__inner">
     <div class="pmx-field__label">Date | Filter</div>
-    <div class="pmx-field__value">
+    <div class="pmx-field__value pmx-field__value--overflow">
 
       <div class="pmx-selector pmx-selector--readonly MULTISELECT__POPUP JS_selector" data-popid="#filter-datepicker">
         <div class="pmx-selector__itemSeperator pmx-selector__itemSeperator--hasLabel">Include</div>
