--- a/pages/pmx-future.html
+++ b/pages/pmx-future.html
@@ -27,7 +27,7 @@ permalink: /future
         {% include blocks/item-header.html %}
       </div>
 
-      <div class="item-body cf">
+      <div class="item-body">
         <div class="item-progress ms-fixed">
           <div class="item-progress__inner">
             {% include blocks/item-progress.html %}
