--- a/pages/pmx-present.html
+++ b/pages/pmx-present.html
@@ -16,7 +16,7 @@ permalink: /present
   </div>
 
   <main class="app__container">
-    <header class="app-header cf">
+    <header class="app-header">
       {% include blocks/app-header.html %}
     </header>
 
