no more toggle class

--- a/pages/selectors.html
+++ b/pages/selectors.html
@@ -124,7 +124,7 @@ permalink: /selectors
         <input type="text" value="test" class="pmx-field__inputEl">
       </div>
 
-      <div class="pmx-selector pmx-selector--expanded pmx-selector--toggleselect JS_selector">
+      <div class="pmx-selector pmx-selector--expanded JS_selector">
         <div class="pmx-selector__item pmx-selector__item--selected JS_selectorItem">
           <div class="pmx-selector__block ">
             <div class="pmx-selector__blockPart pmx-selector__blockPart--prefix" style="background-color: #0BDA51;">Low</div>
@@ -193,7 +193,7 @@ permalink: /selectors
         <input type="text" value="test" class="pmx-field__inputEl">
       </div>
 
-      <div class="pmx-selector pmx-selector--expanded pmx-selector--toggleselect JS_selector">
+      <div class="pmx-selector pmx-selector--expanded JS_selector">
         <div class="pmx-selector__item pmx-selector__item--selected JS_selectorItem">
           <div class="pmx-selector__block ">
             <div class="pmx-selector__blockPart pmx-selector__blockPart--prefix" style="background-color: #0BDA51;"></div>
@@ -265,7 +265,7 @@ permalink: /selectors
         <input type="text" value="test" class="pmx-field__inputEl">
       </div>
 
-      <div class="pmx-selector pmx-selector--expanded pmx-selector--toggleselect JS_selector">
+      <div class="pmx-selector pmx-selector--expanded JS_selector">
         <div class="pmx-selector__item JS_selectorItem">
           <div class="pmx-selector__block ">
             <div class="pmx-selector__blockPart pmx-selector__blockPart--prefix" style="background-color: #F4CA16;">च</div>
@@ -301,7 +301,7 @@ permalink: /selectors
         <input type="text" value="test" class="pmx-field__inputEl">
       </div>
 
-      <div class="pmx-selector pmx-selector--expanded pmx-selector--toggleselect JS_selector">
+      <div class="pmx-selector pmx-selector--expanded JS_selector">
         <div class="pmx-selector__item JS_selectorItem">
           <div class="pmx-selector__block ">
             <div class="pmx-selector__blockPart pmx-selector__blockPart--field">Not started</div>
@@ -370,7 +370,7 @@ permalink: /selectors
         <input type="text" value="test" class="pmx-field__inputEl">
       </div>
 
-      <div class="pmx-selector pmx-selector--expanded pmx-selector--toggleselect JS_selector">
+      <div class="pmx-selector pmx-selector--expanded JS_selector">
         <div class="pmx-selector__item JS_selectorItem">
           <div class="pmx-selector__block">
             <div class="pmx-selector__blockPart pmx-selector__blockPart--field">ध</div>
@@ -403,7 +403,7 @@ permalink: /selectors
         <input type="text" value="test" class="pmx-field__inputEl">
       </div>
 
-      <div class="pmx-selector pmx-selector--expanded pmx-selector--toggleselect JS_selector">
+      <div class="pmx-selector pmx-selector--expanded JS_selector">
         <div class="pmx-selector__item JS_selectorItem">
           <div class="pmx-selector__block ">
             <div class="pmx-selector__blockPart pmx-selector__blockPart--prefix">܌</div>
@@ -413,6 +413,33 @@ permalink: /selectors
         <div class="pmx-selector__item pmx-selector__item--selected JS_selectorItem">
           <div class="pmx-selector__block">
             <div class="pmx-selector__blockPart pmx-selector__blockPart--prefix">ܐ</div>
+          </div>
+        </div>
+      </div>
+
+    </div>
+  </div>
+</div>
+
+<div class="pmx-field">
+  <div class="pmx-field__inner">
+    <div class="pmx-field__label">Billable</div>
+    <div class="pmx-field__value">
+
+      <div class="pmx-field__input pmx-field__input--hidden">
+        <input type="text" value="test" class="pmx-field__inputEl">
+      </div>
+
+      <div class="pmx-selector pmx-selector--expanded JS_selector">
+        <div class="pmx-selector__item pmx-selector__item--selected JS_selectorItem">
+          <div class="pmx-selector__block">
+            <div class="pmx-selector__blockPart pmx-selector__blockPart--prefix"></div>
+          </div>
+        </div>
+        <div class="pmx-selector__itemSeperator"></div>
+        <div class="pmx-selector__item JS_selectorItem">
+          <div class="pmx-selector__block">
+            <div class="pmx-selector__blockPart pmx-selector__blockPart--prefix"></div>
           </div>
         </div>
       </div>
