update item header and add checkbox in selectors

--- a/pages/selectors.html
+++ b/pages/selectors.html
@@ -113,6 +113,29 @@ permalink: /selectors
   </div>
 </div>
 
+<div class="pmx-field">
+  <div class="pmx-field__inner">
+    <div class="pmx-field__label">Checkbox</div>
+    <div class="pmx-field__value">
+
+      <div class="pmx-field__input pmx-field__input--hidden">
+        <input type="text" value="test" class="pmx-field__inputEl">
+      </div>
+
+      <div class="pmx-selector pmx-selector--miltiselect JS_selector">
+        <div class="pmx-selector__item pmx-selector__item--selected JS_selectorItem">
+          <div class="pmx-selector__block">
+            <div class="pmx-selector__blockPart pmx-selector__blockPart--field"></div>
+            <div class="pmx-selector__itemSeperator"></div>
+            <div class="pmx-selector__blockPart pmx-selector__blockPart--field"></div>
+          </div>
+        </div>
+      </div>
+
+    </div>
+  </div>
+</div>
+
 <h2>Without popup</h2>
 
 <div class="pmx-field">
@@ -396,34 +419,7 @@ permalink: /selectors
 
 <div class="pmx-field">
   <div class="pmx-field__inner">
-    <div class="pmx-field__label">Billable</div>
-    <div class="pmx-field__value">
-
-      <div class="pmx-field__input pmx-field__input--hidden">
-        <input type="text" value="test" class="pmx-field__inputEl">
-      </div>
-
-      <div class="pmx-selector pmx-selector--expanded JS_selector">
-        <div class="pmx-selector__item JS_selectorItem">
-          <div class="pmx-selector__block ">
-            <div class="pmx-selector__blockPart pmx-selector__blockPart--prefix">܌</div>
-          </div>
-        </div>
-        <div class="pmx-selector__itemSeperator"></div>
-        <div class="pmx-selector__item pmx-selector__item--selected JS_selectorItem">
-          <div class="pmx-selector__block">
-            <div class="pmx-selector__blockPart pmx-selector__blockPart--prefix">ܐ</div>
-          </div>
-        </div>
-      </div>
-
-    </div>
-  </div>
-</div>
-
-<div class="pmx-field">
-  <div class="pmx-field__inner">
-    <div class="pmx-field__label">Billable</div>
+    <div class="pmx-field__label">Checkbox</div>
     <div class="pmx-field__value">
 
       <div class="pmx-field__input pmx-field__input--hidden">
