add multi slecect checkbox to slector page

--- a/pages/selectors.html
+++ b/pages/selectors.html
@@ -113,29 +113,6 @@ permalink: /selectors
   </div>
 </div>
 
-<div class="pmx-field">
-  <div class="pmx-field__inner">
-    <div class="pmx-field__label">Checkbox</div>
-    <div class="pmx-field__value">
-
-      <div class="pmx-field__input pmx-field__input--hidden">
-        <input type="text" value="test" class="pmx-field__inputEl">
-      </div>
-
-      <div class="pmx-selector pmx-selector--miltiselect JS_selector">
-        <div class="pmx-selector__item pmx-selector__item--selected JS_selectorItem">
-          <div class="pmx-selector__block">
-            <div class="pmx-selector__blockPart pmx-selector__blockPart--field"></div>
-            <div class="pmx-selector__itemSeperator"></div>
-            <div class="pmx-selector__blockPart pmx-selector__blockPart--field"></div>
-          </div>
-        </div>
-      </div>
-
-    </div>
-  </div>
-</div>
-
 <h2>Without popup</h2>
 
 <div class="pmx-field">
@@ -436,6 +413,41 @@ permalink: /selectors
         <div class="pmx-selector__item JS_selectorItem">
           <div class="pmx-selector__block">
             <div class="pmx-selector__blockPart pmx-selector__blockPart--prefix"></div>
+          </div>
+        </div>
+      </div>
+
+    </div>
+  </div>
+</div>
+
+<div class="pmx-field">
+  <div class="pmx-field__inner">
+    <div class="pmx-field__label">Checkbox</div>
+    <div class="pmx-field__value">
+
+      <div class="pmx-selector pmx-selector--expanded JS_selector">
+        <div class="pmx-selector__item pmx-selector__item--selected JS_selectorItem JS_toggle-progress">
+          <div class="pmx-selector__block">
+            <div class="pmx-selector__blockPart pmx-selector__blockPart--prefix"></div>
+          </div>
+        </div>
+        <div class="pmx-selector__itemSeperator"></div>
+        <div class="pmx-selector__item  JS_selectorItem JS_toggle-comments">
+          <div class="pmx-selector__block">
+            <div class="pmx-selector__blockPart pmx-selector__blockPart--prefix"><sup>11</sup></div>
+          </div>
+        </div>
+        <div class="pmx-selector__itemSeperator"></div>
+        <div class="pmx-selector__item JS_selectorItem">
+          <div class="pmx-selector__block">
+            <div class="pmx-selector__blockPart pmx-selector__blockPart--prefix"></div>
+          </div>
+        </div>
+        <div class="pmx-selector__itemSeperator"></div>
+        <div class="pmx-selector__item JS_selectorItem">
+          <div class="pmx-selector__block">
+            <div class="pmx-selector__blockPart pmx-selector__blockPart--prefix"></div>
           </div>
         </div>
       </div>
