--- a/pages/selectors.html
+++ b/pages/selectors.html
@@ -5,9 +5,10 @@ permalink: /selectors
 ---
 
 
-<div class="field field--focus">
+<div class="field JS_field">
   <div class="field__label">Assigned to</div>
   <div class="field__value">
+    <input type="text" value="nick de jaeger" class="field__input">
 
     <div class="selector selector--singleselect">
       <div class="selector__item selector__item--selected JS_selectorItem">
@@ -20,25 +21,26 @@ permalink: /selectors
   </div>
 </div>
 
-<div class="field">
-  <div class="field__label field__label--placeholder">Assigned to</div>
+<div class="field JS_field">
+  <div class="field__label">Assigned to</div>
   <div class="field__value">
-
+    <input type="text" value="" class="field__input">
   </div>
 </div>
 
-<div class="field field--focus">
+<div class="field JS_field">
   <div class="field__label">Assigned to</div>
   <div class="field__value">
-
+    <input type="text" value="" class="field__input">
   </div>
 </div>
 
 <h2>With popup</h2>
 
-<div class="field">
+<div class="field JS_field">
   <div class="field__label">Due date</div>
   <div class="field__value">
+    <input type="text" value="11/17/2017" class="field__input">
 
     <div class="selector selector--singleselect">
       <div class="selector__item selector__item--selected JS_selectorItem">
@@ -56,9 +58,10 @@ permalink: /selectors
   </div>
 </div>
 
-<div class="field field--error">
+<div class="field field--error JS_field">
   <div class="field__label">Status</div>
   <div class="field__value">
+    <input type="text" value="Not started" class="field__input">
 
     <div class="selector selector--singleselect MULTISELECT__POPUP JS_selector" data-popid="#multiSelector-1">
       <div class="selector__item selector__item--selected JS_selectorItem">
@@ -72,9 +75,10 @@ permalink: /selectors
   </div>
 </div>
 
-<div class="field field--error">
+<div class="field field--error JS_field">
   <div class="field__label">Status</div>
   <div class="field__value">
+    <input type="text" value="" class="field__input">
 
     <div class="selector selector--singleselect MULTISELECT__POPUP JS_selector" data-popid="#multiSelector-2">
       <div class="selector__item selector__item--selected JS_selectorItem">
@@ -90,9 +94,10 @@ permalink: /selectors
 
 <h2>Without popup</h2>
 
-<div class="field">
+<div class="field JS_field">
   <div class="field__label">Danger level</div>
   <div class="field__value">
+    <input type="text" value="Low" class="field__input">
 
     <div class="selector selector--singleselect selector--expanded JS_selector">
       <div class="selector__item selector__item--selected JS_selectorItem">
@@ -117,9 +122,10 @@ permalink: /selectors
   </div>
 </div>
 
-<div class="field">
+<div class="field JS_field">
   <div class="field__label">Product contact</div>
   <div class="field__value">
+    <input type="text" value="Heet" class="field__input">
 
     <div class="selector selector--multiselect selector--expanded JS_selector">
       <div class="selector__item selector__item--selected JS_selectorItem">
@@ -147,9 +153,10 @@ permalink: /selectors
   </div>
 </div>
 
-<div class="field">
+<div class="field JS_field">
   <div class="field__label">Status</div>
   <div class="field__value">
+    <input type="text" value="Not started" class="field__input">
 
     <div class="selector selector--singleselect selector--expanded JS_selector">
       <div class="selector__item selector__item--selected JS_selectorItem">
@@ -177,9 +184,10 @@ permalink: /selectors
   </div>
 </div>
 
-<div class="field">
+<div class="field JS_field">
   <div class="field__label">Tags</div>
   <div class="field__value">
+    <input type="text" value="dev-team back-end 297" class="field__input">
 
     <div class="selector selector--multiselect selector--expanded JS_selector">
       <div class="selector__item selector__item--selected JS_selectorItem">
@@ -207,9 +215,10 @@ permalink: /selectors
   </div>
 </div>
 
-<div class="field">
+<div class="field JS_field">
   <div class="field__label">Status</div>
   <div class="field__value">
+    <input type="text" value="Ongoing" class="field__input">
 
     <div class="selector selector--singleselect selector--expanded JS_selector">
       <div class="selector__item JS_selectorItem">
@@ -237,9 +246,10 @@ permalink: /selectors
   </div>
 </div>
 
-<div class="field">
+<div class="field JS_field">
   <div class="field__label">Status</div>
   <div class="field__value">
+    <input type="text" value="Ongoing" class="field__input">
 
     <div class="selector selector--singleselect selector--expanded JS_selector">
       <div class="selector__item JS_selectorItem">
@@ -300,9 +310,10 @@ permalink: /selectors
   </div>
 </div>
 
-<div class="field">
+<div class="field JS_field">
   <div class="field__label">Checkbox (filter in header)</div>
   <div class="field__value">
+    <input type="text" value=" " class="field__input">
 
     <div class="selector selector--multiselect selector--expanded JS_selector">
       <div class="selector__item selector__item--selected JS_selectorItem">
@@ -321,9 +332,10 @@ permalink: /selectors
   </div>
 </div>
 
-<div class="field">
+<div class="field JS_field">
   <div class="field__label">Checkbox</div>
   <div class="field__value">
+    <input type="text" value="" class="field__input">
 
     <div class="selector selector--singleselect selector--expanded JS_selector">
       <div class="selector__item selector__item--selected JS_selectorItem">
@@ -342,9 +354,10 @@ permalink: /selectors
   </div>
 </div>
 
-<div class="field">
+<div class="field JS_field">
   <div class="field__label">Checkbox</div>
   <div class="field__value">
+    <input type="text" value="" class="field__input">
 
     <div class="selector selector--singleselect selector--expanded JS_selector">
       <div class="selector__item selector__item--selected JS_selectorItem JS_toggle-progress">
@@ -377,8 +390,9 @@ permalink: /selectors
 
 <h2>Read-only with ellipsis</h2>
 
-<div class="field">
+<div class="field JS_field">
   <div class="field__value">
+    <input type="text" value="Field Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum" class="field__input">
 
     <div class="selector selector--readonly">
       <div class="selector__item">
@@ -396,19 +410,20 @@ permalink: /selectors
 
 <h2>Filters</h2>
 
-<div class="field">
+<div class="field JS_field">
   <div class="field__value">
+    <input type="text" value="Design" class="field__input">
 
-    <div class="selector selector--readonly JS_selector">
+    <div class="selector selector--readonly">
       <div class="selector__itemSeperator selector__itemSeperator--hasLabel font--label">Include</div>
-      <div class="selector__item JS_selectorItem">
+      <div class="selector__item">
         <div class="selector__block">
           <div class="selector__blockPart selector__blockPart--prefix" style="background-color: #00BFFF;">ग़</div>
           <div class="selector__blockPart selector__blockPart--field">Design</div>
         </div>
       </div>
       <div class="selector__itemSeperator selector__itemSeperator--hasLabel font--label">And</div>
-      <div class="selector__item JS_selectorItem">
+      <div class="selector__item">
         <div class="selector__block">
           <div class="selector__blockPart selector__blockPart--prefix" style="background-color: #0BDA51;">ग़</div>
           <div class="selector__blockPart selector__blockPart--field">Marketing</div>
@@ -416,20 +431,20 @@ permalink: /selectors
       </div>
     </div>
 
-    <div class="selector selector--readonly JS_selector">
+    <div class="selector selector--readonly">
       <div class="selector__itemSeperator selector__itemSeperator--hasLabel font--label">Or</div>
     </div>
 
-    <div class="selector selector--readonly JS_selector">
+    <div class="selector selector--readonly">
       <div class="selector__itemSeperator selector__itemSeperator--hasLabel font--label">Exclude</div>
-      <div class="selector__item JS_selectorItem">
+      <div class="selector__item">
         <div class="selector__block">
           <div class="selector__blockPart selector__blockPart--prefix" style="background-color: #0BDA51;">ग़</div>
           <div class="selector__blockPart selector__blockPart--field">front-end</div>
         </div>
       </div>
       <div class="selector__itemSeperator selector__itemSeperator--hasLabel font--label">Or</div>
-      <div class="selector__item JS_selectorItem">
+      <div class="selector__item">
         <div class="selector__block">
           <div class="selector__blockPart selector__blockPart--prefix" style="background-color: #F4CA16;">ग़</div>
           <div class="selector__blockPart selector__blockPart--field">back-end</div>
@@ -440,24 +455,25 @@ permalink: /selectors
   </div>
 </div>
 
-<div class="field">
+<div class="field JS_field">
   <div class="field__label">Description</div>
   <div class="field__value">
+    <input type="text" value="improvement" class="field__input">
 
     <div class="selector selector--readonly" >
       <div class="selector__itemSeperator selector__itemSeperator--hasLabel font--label">Include</div>
-      <div class="selector__item ">
+      <div class="selector__item">
         <div class="selector__block">
           <div class="selector__blockPart selector__blockPart--field">improvement</div>
         </div>
       </div>
     </div>
 
-    <div class="selector selector--readonly JS_selector">
+    <div class="selector selector--readonly">
       <div class="selector__itemSeperator selector__itemSeperator--hasLabel font--label">And</div>
     </div>
 
-    <div class="selector selector--readonly JS_selector">
+    <div class="selector selector--readonly">
       <div class="selector__itemSeperator selector__itemSeperator--hasLabel font--label">Exclude</div>
       <div class="selector__item">
         <div class="selector__block">
@@ -469,20 +485,21 @@ permalink: /selectors
   </div>
 </div>
 
-<div class="field">
+<div class="field JS_field">
   <div class="field__label">Tags | Filter</div>
   <div class="field__value">
+    <input type="text" value="Design" class="field__input">
 
-    <div class="selector selector--readonly MULTISELECT__POPUP JS_selector" data-popid="#filter-tagpicker">
+    <div class="selector selector--readonly MULTISELECT__POPUP" data-popid="#filter-tagpicker">
       <div class="selector__itemSeperator selector__itemSeperator--hasLabel font--label">Include</div>
-      <div class="selector__item JS_selectorItem">
+      <div class="selector__item">
         <div class="selector__block">
           <div class="selector__blockPart selector__blockPart--prefix" style="background-color: #00BFFF;">ग़</div>
           <div class="selector__blockPart selector__blockPart--field">Design</div>
         </div>
       </div>
       <div class="selector__itemSeperator selector__itemSeperator--hasLabel font--label">And</div>
-      <div class="selector__item JS_selectorItem">
+      <div class="selector__item">
         <div class="selector__block">
           <div class="selector__blockPart selector__blockPart--prefix" style="background-color: #0BDA51;">ग़</div>
           <div class="selector__blockPart selector__blockPart--field">Marketing</div>
@@ -496,14 +513,14 @@ permalink: /selectors
 
     <div class="selector selector--readonly JS_selector">
       <div class="selector__itemSeperator selector__itemSeperator--hasLabel font--label">Exclude</div>
-      <div class="selector__item JS_selectorItem">
+      <div class="selector__item">
         <div class="selector__block">
           <div class="selector__blockPart selector__blockPart--prefix" style="background-color: #f4ca16;">ग़</div>
           <div class="selector__blockPart selector__blockPart--field">front-end</div>
         </div>
       </div>
       <div class="selector__itemSeperator selector__itemSeperator--hasLabel font--label">Or</div>
-      <div class="selector__item JS_selectorItem">
+      <div class="selector__item">
         <div class="selector__block">
           <div class="selector__blockPart selector__blockPart--prefix" style="background-color: #e30022;">ग़</div>
           <div class="selector__blockPart selector__blockPart--field">back-end</div>
@@ -514,38 +531,39 @@ permalink: /selectors
   </div>
 </div>
 
-<div class="field">
+<div class="field JS_field">
   <div class="field__label">Date | Filter</div>
   <div class="field__value">
+    <input type="text" value="next 2 weeks (12/03/18-25/03/18)" class="field__input">
 
-    <div class="selector selector--readonly MULTISELECT__POPUP JS_selector" data-popid="#filter-datepicker">
+    <div class="selector selector--readonly MULTISELECT__POPUP" data-popid="#filter-datepicker">
       <div class="selector__itemSeperator selector__itemSeperator--hasLabel font--label">Include</div>
-      <div class="selector__item JS_selectorItem">
+      <div class="selector__item">
         <div class="selector__block">
           <div class="selector__blockPart selector__blockPart--field">next 2 weeks (12/03/18-25/03/18)</div>
         </div>
       </div>
       <div class="selector__itemSeperator selector__itemSeperator--hasLabel font--label">And</div>
-      <div class="selector__item JS_selectorItem">
+      <div class="selector__item">
         <div class="selector__block">
           <div class="selector__blockPart selector__blockPart--field">19/03/18-20/03/18</div>
         </div>
       </div>
     </div>
 
-    <div class="selector selector--readonly JS_selector">
+    <div class="selector selector--readonly">
       <div class="selector__itemSeperator selector__itemSeperator--hasLabel font--label">Or</div>
     </div>
 
-    <div class="selector selector--readonly JS_selector">
+    <div class="selector selector--readonly">
       <div class="selector__itemSeperator selector__itemSeperator--hasLabel font--label">Exclude</div>
-      <div class="selector__item JS_selectorItem">
+      <div class="selector__item">
         <div class="selector__block">
           <div class="selector__blockPart selector__blockPart--field">today</div>
         </div>
       </div>
       <div class="selector__itemSeperator selector__itemSeperator--hasLabel font--label">Or</div>
-      <div class="selector__item JS_selectorItem">
+      <div class="selector__item">
         <div class="selector__block">
           <div class="selector__blockPart selector__blockPart--field">18/03/18</div>
         </div>
@@ -557,9 +575,10 @@ permalink: /selectors
 
 <h2>Tag Picker</h2>
 
-<div class="field">
+<div class="field JS_field">
   <div class="field__label">Tags</div>
   <div class="field__value">
+    <input type="text" value="282 2013_Maintenance workaround_available" class="field__input">
 
     <div class="selector selector--multiselect MULTISELECT__POPUP JS_selector" data-popid="#multiSelector-tagpicker">
       <div class="selector__item selector__item--selected">
@@ -587,32 +606,26 @@ permalink: /selectors
 {% include popups/multiSelector-tags-colors.html %}
 
 <script>
+  checkEmptyFields();
 
-  /*****************************************************/
-  /**  Set --FOCUS or --EMPTY classes for fields  **/
-  /*****************************************************/
-
-  pmxFieldEmpty();
-
-  $('.field__inputEl').on('keyup focus focusout', function() {
-    pmxFieldEmpty();
+  $('.JS_field').focusin(function() {
+    $(this).addClass('field--focus');
+    checkEmptyFields();
   });
 
-  function pmxFieldEmpty() {
-    $('.field__inputEl').each(function() {
-      var _this = $(this);
-      var _parent = $(this).parent().parent().parent().parent();
-      if(_this.val().length < 1) {
-        if(!_parent.hasClass('field--empty')) {
-          _parent.addClass('field--empty');
-        }
+  $('.JS_field').focusout(function() {
+    $(this).removeClass('field--focus');
+    checkEmptyFields();
+  });
+
+  function checkEmptyFields() {
+    $('.JS_field').each(function() {
+      if ($(this).find('input').val().length > 0 || $(this).find('.selector').length > 0) {
+        $(this).find('.field__label').removeClass('field__label--placeholder');
       }
       else {
-        if(_parent.hasClass('field--empty')) {
-          _parent.removeClass('field--empty');
-        }
+        $(this).find('.field__label').addClass('field__label--placeholder');
       }
     });
   }
-
 </script>
