--- a/pages/font.html
+++ b/pages/font.html
@@ -64,8 +64,8 @@ permalink: /font
     font-weight: 700;
   }
   .highlight {
-    border-left: 5px solid #CCCC63;
-    border-right: 5px solid #CCCC63;
+    border-left: 5px solid var(--color-primary);
+    border-right: 5px solid var(--color-primary);
   }
 </style>
 
